[package]
name = "dgewgpurenderer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
pollster = "0.2.5"
bytemuck = {version = "1.12.3", features = ["derive"]}
image = {version = "0.24.5", default-features = false, features = ["png", "jpeg", "gif"]}
raw-window-handle = "0.5.0"
